# soulvpn

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: client.toml  server.toml  soulvpn-client.service  soulvpn-server.service  tmpfiles-soulvpn.conf
src/: client.rs  config.rs  control.rs  crypto.rs  main.rs  monitor.rs  packet.rs  route.rs  server.rs  stats.rs  tun_dev.rs
