[package]
name = "soulvpn"
version = "0.1.0"
edition = "2021"
description = "System-wide VPN: Noise_IK over UDP into a TUN device"
license = "MIT"
repository = "https://github.com/soulhashira/soulvpn"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
snow = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "signal", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tun = { version = "0.7", features = ["async"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }

[profile.release]
lto = "thin"
codegen-units = 1
